SFDC DevOps Test/src/objects/Training_Material__c.object
<CustomObject>
    <description>TOOLKIT _ An Object to process the training material specific to the client.</description>
    <fields>
        <fullName>Change_Impact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Change Impact</label>
        <referenceTo>Change_Impact__c</referenceTo>
        <relationshipName>Training_Materials_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliverable_Type__c</fullName>
        <label>Deliverable Type</label>
        <picklist>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Method_s__c</fullName>
        <label>Delivery Method(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Instructor Led/Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Based Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo Video</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Job Aid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant Guide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAQs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Description for Training Object</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Stage__c</fullName>
        <label>Development Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Analyze</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Design Outline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recording WBT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy/Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impacted_Audience__c</fullName>
        <label>Impacted Audience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Learning_Objective__c</fullName>
        <label>Learning Objectives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Training_Materials_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <label>Progress</label>
        <picklist>
            <picklistValues>
                <fullName>0%</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>10%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>40%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90%</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100%</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Training_Materials_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reviewers__c</fullName>
        <label>Reviewers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Notes__c</fullName>
        <label>Status Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Track</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Material</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Training Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>